<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/genderLayout"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:layout_marginTop="220dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="20dp"
            android:layout_weight="1"
            android:elevation="20dp"
            app:cardBackgroundColor="@color/card_bg"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/baseline_female_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="20dp"
            android:layout_weight="1"
            android:elevation="20dp"
            app:cardBackgroundColor="@color/card_bg"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/baseline_male_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/sliderCard"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:layout_below="@+id/genderLayout"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="20dp"
        android:elevation="20dp"
        app:cardBackgroundColor="@color/card_bg"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Height_unit"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/displayHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_height"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="244"
                android:progress="153"
                android:progressTint="@color/purple"
                android:thumbTint="@color/btn_color" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/vitalLayout"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:layout_below="@+id/sliderCard"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="1"
            android:elevation="20dp"
            app:cardBackgroundColor="@color/card_bg"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Weight_unit"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/weightText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_weight"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:elevation="20dp"
                        app:cardCornerRadius="40dp">

                        <TextView
                            android:id="@+id/plusWeight"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/plus"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="26sp"
                            android:textStyle="bold" />

                    </androidx.cardview.widget.CardView>

                    <View
                        android:layout_width="11dp"
                        android:layout_height="wrap_content" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:elevation="20dp"
                        app:cardCornerRadius="40dp">

                        <TextView
                            android:id="@+id/minusWeight"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/minus"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="26sp"
                            android:textStyle="bold" />

                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="1"
            android:elevation="20dp"
            app:cardBackgroundColor="@color/card_bg"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age_unit"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ageText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_age"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:elevation="20dp"
                        app:cardCornerRadius="40dp">

                        <TextView
                            android:id="@+id/plusAge"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/plus"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="26sp"
                            android:textStyle="bold" />

                    </androidx.cardview.widget.CardView>

                    <View
                        android:layout_width="11dp"
                        android:layout_height="wrap_content" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:elevation="20dp"
                        app:cardCornerRadius="40dp">

                        <TextView
                            android:id="@+id/minusAge"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/minus"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="26sp"
                            android:textStyle="bold" />

                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_alignParentBottom="true"
        android:background="@color/btn_color"
        android:gravity="center">

        <TextView
            android:id="@+id/calculateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:textColor="@color/white"
            android:textSize="44sp" />

    </LinearLayout>
</RelativeLayout>